test/corpus/advanced_features.txt
================================================================================
Class with exact modifier
================================================================================

---@class (exact) Point
---@field x number
---@field y number

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier)))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier)))))))))

================================================================================
Class with partial modifier
================================================================================

---@class (partial) Animal
---@field weight number

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier)))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier)))))))))

================================================================================
Field with index signature
================================================================================

---@class Configuration
---@field host string
---@field [string] any

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier)))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (field_annotation
      key_type: (type
        (primary_type
          (basic_type
            (identifier))))
      value_type: (type
        (primary_type
          (basic_type
            (identifier)))))))

================================================================================
Field with optional marker
================================================================================

---@class User
---@field name string
---@field email? string

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier)))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier)))))))))

================================================================================
Param with optional marker
================================================================================

---@param name string
---@param age? number
---@param ... any

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier)))))))))

================================================================================
Return with name and description
================================================================================

---@return boolean success
---@return string | nil error

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))))
        description: (description))))
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))
            (type
              (primary_type
                (literal_type)))))
        description: (description)))))

================================================================================
Deprecated with description
================================================================================

---@deprecated

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (deprecated_annotation)))

================================================================================
Version with range
================================================================================

---@version >=5.1
---@version <5.4

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (version_annotation
      version: (version_range)))
  (annotation
    (comment_prefix)
    (version_annotation
      version: (version_range))))

================================================================================
Operator with new syntax
================================================================================

---@operator(add): Vector
---@operator(call): function

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (operator_annotation
      op: (operator)
      return_type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (operator_annotation
      op: (operator)
      return_type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier)))))))))

================================================================================
Source annotation
================================================================================

---@source "path/to/source.lua"

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (source_annotation
      source: (string))))

================================================================================
Complex combination
================================================================================

---@class (exact) BankAccount
---@field public balance number
---@field private pin string
---@field [string] any

---@param amount? number
---@return boolean success
---@return string | nil error
---@deprecated

--------------------------------------------------------------------------------

(source
  (annotation
    (comment_prefix)
    (class_annotation
      name: (identifier)))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (field_annotation
      name: (field_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (field_annotation
      key_type: (type
        (primary_type
          (basic_type
            (identifier))))
      value_type: (type
        (primary_type
          (basic_type
            (identifier))))))
  (annotation
    (comment_prefix)
    (param_annotation
      name: (param_name)
      type: (type_annotation_value
        (type_list
          (type
            (primary_type
              (basic_type
                (identifier))))))))
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))))
        description: (description))))
  (annotation
    (comment_prefix)
    (return_annotation
      (return_value
        type: (return_type_annotation
          (type_list
            (type
              (primary_type
                (basic_type
                  (identifier))))
            (type
              (primary_type
                (literal_type)))))
        description: (description))))
  (annotation
    (comment_prefix)
    (deprecated_annotation)))
